# Xnas

./: .gitignore  Cargo.toml  Rocket.toml  build.rs  diesel.toml  package-lock.json
src/: main.rs
src/data/: apps.rs  login_data.rs  mod.rs
src/router/: login.rs  mod.rs  status.rs
src/router/auth/: apps.rs  mod.rs
src/util/: install.rs  mod.rs  struct_to_py_object.rs
xnas-frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
xnas-frontend/public/: particles.json
xnas-frontend/src/app/: api.ts  globals.css  layout.tsx  page.tsx
xnas-frontend/src/app/app/: dock.tsx  page.tsx  window.tsx
xnas-frontend/src/app/first/: page.tsx
xnas-lib/: Cargo.toml  pyproject.toml
xnas-lib/src/: call.rs  lib.rs  parser.rs
xnas-lib/test/: main.py
xnas-lib/test/utils/: foo.py
xnas-orm/: Cargo.toml
xnas-orm/migrations/2023-04-14-162729_accounts/: up.sql
xnas-orm/migrations/2023-04-23-073924_apps/: down.sql  up.sql
xnas-orm/src/: lib.rs  models.rs  schema.rs
