[package]
name = "xnas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
xnas-orm = { path = "./xnas-orm" }
bcrypt = "0.14"
jsonwebtoken = "8"

[build-dependencies]
npm_rs = "1.0.0"
